--- a/css/main.css
+++ b/css/main.css
@@ -211,7 +211,7 @@
 .btn-box .next-btn {
     float: right;
 }
-.btn-box .wide {
-    display: none;
+.btn-box .save-btn,
+.btn-box .final-btn{
     width: 100%;
 }
