--- a/css/main.css
+++ b/css/main.css
@@ -62,9 +62,7 @@ img {display: block;}
     width: calc(100% - 27px);
 }
 
-
 #termschk:checked ~.terms-label {background-color: #7465E8;}
-
 
 /* ---------------------- tab-page 2 ----------------------- */
 .tab-page .col-1 {
@@ -89,7 +87,9 @@ img {display: block;}
     border: none;
     border-bottom: 1px solid #ccc;
     float: right;
+    line-height: 36px;
 }
+
 .tab-page .row-1 .form-control:focus {outline:none;}
 .tab-page .invalid-feedback {
     color: #707070;
@@ -135,12 +135,29 @@ img {display: block;}
 input[type='date']::before {
     content: attr(data-placeholder);
     width: 100%;
+    float: left;
+    margin-top: 9px;
+    margin-left: 5px;
+    margin: 0;
+    padding-left: 5px;
 }
 
 input[type='date']:focus::before,
 input[type='date']:valid::before {
-  display: none;
+    display: none;
 }
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    position: absolute;
+    top: 7px;
+    right: 7px;
+}
+input[type=date]::-webkit-datetime-edit-year-field { 
+    margin-left: 7PX;
+  } 
 
 /* ---------------------- tab-page 3-1 ----------------------- */
 #sex01:checked ~.row-radio-label-box .sex-check-label01,
