동의서 체크 아이콘 위치 조정

--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,7 @@ img {display: block;}
 .terms-row .terms-label .terms-check-img {
     width: 66%;
     padding-left: 17%;
-    padding-bottom: 7%;
+    padding-top: 7%;
 }
 .terms-row .terms-agree {
     float: left;
