--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ img {display: block;}
     .wrap {
         height: 100vh;
         padding: 40px;
-        padding-top: 75px
+        padding-top: 55px
     }
   }
 
@@ -131,7 +131,9 @@ img {display: block;}
     border: 2px solid #eee;
     margin-top: 4px;
 }
-
+input[type='date'] {
+    position: relative;
+}
 input[type='date']::before {
     content: attr(data-placeholder);
     width: 100%;
@@ -146,15 +148,16 @@ input[type='date']:focus::before,
 input[type='date']:valid::before {
     display: none;
 }
-
 input[type="date"]::-webkit-calendar-picker-indicator {
     width: 100%;
-    height: 100%;
-    background: transparent;
+    height: 36px;
     position: absolute;
-    top: 7px;
-    right: 7px;
+    background-position: right;
+    background-size: 4%;
+    top: 0px;
+    right: 3px;
 }
+
 input[type=date]::-webkit-datetime-edit-year-field { 
     margin-left: 7PX;
   } 
