--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,6 @@
 * {margin: 0; padding: 0;}
 img {display: block;}
 
-body {
-    overflow: scroll;
-}
-
 .wrap {
     max-width: 480px;
     padding: 29px;
@@ -12,15 +8,15 @@ body {
     padding-bottom: 40px;
     margin: 0 auto;
     background-color: white;
-    position: relative;
 }
 
 @media (min-width: 1000px) {
     body {
         background-color: #eee;
+        overflow: hidden;
     }
     .wrap {
-        height: calc(100vh - 180px);
+        height: 100vh;
         padding: 40px;
         padding-top: 55px;
     }
@@ -29,7 +25,6 @@ body {
 /* ---------------------- tab-page 1 ----------------------- */
 .tab-page {
     width: 100%;
-    overflow: hidden;
 }
 .tab-page .tab-title {
     color: #3d3d3d;
@@ -261,22 +256,17 @@ input[type=date]::-webkit-datetime-edit-year-field {
     background-color: #7465E8;
     float: left;
     margin-top: 100px;
-    margin-bottom: 50px;
-    position: absolute;
-    bottom: 0;
 }
 .prev-btn {
-    left: 29px;
+    float: left;
 
 }
 .btn-box .next-btn {
-    right: 29px;
+    float: right;
 }
 .btn-box .save-btn,
 .btn-box .final-btn{
-    width: calc(100% - 58px);
-    position: absolute;
-    left: 29px;
+    width: 100%;
 }
 
 .unsuccess-box {
