--- a/css/main.css
+++ b/css/main.css
@@ -177,8 +177,10 @@ input[type=date]::-webkit-datetime-edit-year-field {
 .wrap .page-3-2 {display: none;}
 #menarche01:checked ~.row-radio-label-box .menarche-check-label01,
 #menarche02:checked ~.row-radio-label-box .menarche-check-label02,
-#monthlyperiod01:checked ~.radio-label-box .monthlyperiod-check-label01,
-#monthlyperiod02:checked ~.radio-label-box .monthlyperiod-check-label02 {
+#monthlyperiod01:checked ~.row-radio-label-box .monthlyperiod-check-label01,
+#monthlyperiod02:checked ~.row-radio-label-box .monthlyperiod-check-label02,
+#otherbleeding01:checked ~.row-radio-label-box .otherbleeding-check-label01,
+#otherbleeding02:checked ~.row-radio-label-box .otherbleeding-check-label02 {
     border: 2px solid #7465E8;
 }
 .tab-page .row-3 {
@@ -186,6 +188,21 @@ input[type=date]::-webkit-datetime-edit-year-field {
     overflow: hidden;
     margin-bottom: 20px;
 }
+#lastperiod2chk {display: none;}
+.lastperiod2-check-label {
+    display: inline-block;
+    width: calc(100% - 110px);
+    height: 32px;
+    font-size: 12px;
+    color: #252525;
+    line-height: 32px;
+    border-radius: 10px;
+    border: 2px solid #eee;
+    margin-top: 4px;
+    margin-left: 88px;
+    padding-left: 16px;
+}
+#lastperiod2chk:checked ~ .lastperiod2-check-label{border: 2px solid #7465E8;}
 /* ---------------------- tab-page 4 ----------------------- */
 .tab-page .row-smell {
     height: 154px;
